# sensemore-studio

./: .gitignore  Easy_Wav2Lip_v8.3.ipynb  README.md  WorkSpec.md
backend-fastapi/sensemore-ai/: .env  PROJECT_SUMMARY.md  README.md  pyproject.toml  start.sh  调试说明.md
backend-fastapi/sensemore-ai/app/: __init__.py  config.py  main.py
backend-fastapi/sensemore-ai/app/api/: deps.py
backend-fastapi/sensemore-ai/app/api/v1/: api.py
backend-fastapi/sensemore-ai/app/api/v1/endpoints/: __init__.py  ai.py  health.py
backend-fastapi/sensemore-ai/app/models/: schemas.py
backend-fastapi/sensemore-ai/app/services/: ai_service.py
backend-fastapi/sensemore-ai/tests/: test_main.py
backend-fastapi/sensemore-facade/: README.md  main.py  pyproject.toml
backend-fastapi/sensemore-facade/app/api/: router.py
backend-fastapi/sensemore-facade/app/api/endpoints/: health.py
backend-fastapi/sensemore-facade/app/config/: settings.py
backend-springboot/sensemore-aistudio/: .gitignore  pom.xml
backend-springboot/sensemore-aistudio/src/main/resources/: application.properties  application.yml
backend-springboot/sensemore-aistudio/src/main/resources/db/: data-h2.sql  schema-h2.sql
backend-springboot/sensemore-tenant/: README.md  pom.xml
backend-springboot/sensemore-tenant/sensemore-tenant/src/main/resources/: application.properties
backend-springboot/sensemore-tenant/src/main/resources/: application.yml
backend-springboot/sensemore-tenant/src/main/resources/db/: data.sql  (+1 more)
data/: testdb.mv.db  testdb.trace.db
frontend-vue3/sensemore-admin/: index.html  package-lock.json  package.json
frontend-vue3/sensemore-admin/src/: App.vue  main.js
frontend-vue3/sensemore-admin/src/router/: index.js
frontend-vue3/sensemore-admin/src/views/: About.vue  Dashboard.vue  NotFound.vue
frontend-vue3/sensemore-h5/: index.html  package-lock.json  package.json
frontend-vue3/sensemore-h5/src/components/: HelloWorld.vue
frontend-vue3/sensemore-h5/src/pages/: H5Plain.vue  H5WithNav.vue
frontend-vue3/sensemore-h5/src/router/: index.js
(+70 files in other folders)
